# spark-wallet

./: .eslintrc  .gitignore  .nowignore  LICENSE  README.md  capacitor.config.json  index.ts  now.json  package-lock.json  package.json  rollup.config.js  tauri.conf.js  tsconfig.json  webpack.config.js
.github/workflows/: nodejs.yml
.test/: .eslintrc  babel.config.js  package.json
.test/components/: button.test.js
.tests/: config.ts  package-lock.json  package.json
.tests/lib/: helpers.test.js  helpers.test.ts
__tests__/: config.js  package.json
__tests__/components/: button.test.js
__tests__/lib/: helpers.test.js
api/: manifest.ts  time.ts
ios/App/: Podfile
ios/App/App/: Info.plist  capacitor.config.json
ios/App/App.xcodeproj/: project.pbxproj
src-tauri/: Cargo.toml  bundle.json  config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs  updater.rs
src-ui/: Index.svelte  index.html  index.js  index.ts
src-ui/assets/: Berny.svelte  manifest.json  worker.js
src-ui/assets/flags/: uk.svelte  us.svelte
src-ui/components/: Animation.svelte  Button.svelte  Chart.svelte  Footer.svelte  Header.svelte  Icon.svelte  Notification.svelte  Popup.svelte  QR.svelte  Rocketman.svelte  Route.svelte  Spinner.svelte  Tabs.svelte  Theme.svelte  View.svelte  animation.svelte  index.js
src-ui/components/animations/: loading.json  pay-error.json  pay-ok.json  pay.json  president.json  receive.json
src-ui/components/inputs/: Address.svelte  Amount.svelte  Dropdown.svelte  Toggle.svelte
src-ui/components/popups/: Backup.svelte  Export.svelte  Help.svelte  Popup.svelte  Transaction.svelte  Warning.svelte
src-ui/lib/: account.ts  api.js  api.ts  app.ts  config.ts  helpers.ts  market.ts  router.ts  seedVault.ts  state.js
src-ui/views/: Dashboard.svelte  History.svelte  Pay.svelte  Receive.svelte  Request.svelte  Send.svelte  Settings.svelte  Setup.svelte  Splash.svelte
types/svelte/: animate.d.ts  easing.d.ts  index.d.ts  motion.d.ts  store.d.ts  svelte.d.ts  transition.d.ts
