[package]
name = "spark-wallet"
version = "0.1.0"
description = "Spark wallet"
license = "mit"
repository = "https://github.com/iotaledger/spark-wallet"
default-run = "spark-wallet"

[package.metadata.bundle]
identifier = "org.iota.spark"
icon = [
  "../assets/icons/32x32.png",
  "../assets/icons/128x128.png",
  "../assets/icons/128x128@2x.png",
  "../assets/icons/icon.icns",
  "../assets/icons/icon.ico"
]

[dependencies]
serde_json = "1.0.41"
serde = "1.0"
serde_derive = "1.0"
tiny_http = "0.6"
phf = "0.7.24"
includedir = "0.5.0"
rand = "0.6"
keyring = "0.7.0"
unwrap = "1.2.0"

  [dependencies.tauri]
  version = "0.1.2"
  features = [ "all-api", "edge" ]

  [dependencies.system_uri]
  version = "0.4.0"
  default-features = false

[features]
dev = [ "tauri/dev" ]
embedded-server = [ "tauri/embedded-server" ]

[[bin]]
name = "spark-wallet"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
